<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connexus.Connexus$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/connexus_name"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/searchReturnMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="19dp"
        android:text="@string/login_with_gmail"
        android:textSize="20sp" />

    <Button
        android:id="@+id/viewStreamsButtonL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="37dp"
        android:text="@string/view_streams" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPassword"
        android:layout_centerVertical="true"
        android:text="@string/login" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignLeft="@+id/userId"
        android:ems="10"
        android:hint="@string/gmail_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userPassword"
        android:layout_alignLeft="@+id/searchReturnMessage"
        android:ems="10"
        android:hint="@string/gmail_id" >

        <requestFocus />
    </EditText>

</RelativeLayout>