<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connexus.Connexus$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/connexus_name"
        android:textSize="35sp" />

    <Button
        android:id="@+id/chooseFromLibraryButtonU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/choose_from_your_library" />

    <Button
        android:id="@+id/useCameraButtonU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chooseFromLibraryButtonU"
        android:layout_below="@+id/chooseFromLibraryButtonU"
        android:text="@string/use_camera" />

    <EditText
        android:id="@+id/messageBoxU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/useCameraButtonU"
        android:layout_below="@+id/useCameraButtonU"
        android:ems="10"
        android:hint="@string/add_message_or_tags"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/uploadButtonU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/messageBoxU"
        android:layout_below="@+id/messageBoxU"
        android:enabled="false"
        android:text="@string/upload"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uploadButtonU"
        android:layout_below="@+id/uploadButtonU"
        android:layout_marginTop="23dp"
        android:text="Stream: " />

    <TextView
        android:id="@+id/streamNameU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="StreamNameGoesHere" />

</RelativeLayout>