<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connexus.Connexus$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/connexus_name"
        android:textSize="35sp" />

    <Button
        android:id="@+id/takePictureButtonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageThumbnailC"
        android:text="@string/take_picture"
        android:textSize="15sp" />

    <Button
        android:id="@+id/streamsButtonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/takePictureButtonC"
        android:layout_alignRight="@+id/usePictureButtonC"
        android:layout_below="@+id/takePictureButtonC"
        android:text="@string/streams" />

    <Button
        android:id="@+id/usePictureButtonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/streamsButtonC"
        android:layout_toRightOf="@+id/takePictureButtonC"
        android:enabled="false"
        android:text="@string/use_this_picture"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageThumbnailC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>