<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connexus.Connexus$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/connexus_name"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/streamTableVNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/streamTableRow1VNS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streamTableRow2VNS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streamTableRow3VNS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streamTableRow4VNS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/nearbyPicturesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/streamTableVNS"
        android:layout_below="@+id/streamTableVNS"
        android:layout_marginTop="16dp"
        android:text="@string/nearby_pictures"
        android:textSize="20sp" />

    <Button
        android:id="@+id/moreButtonVNS"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nearbyPicturesText"
        android:layout_alignBottom="@+id/nearbyPicturesText"
        android:layout_toRightOf="@+id/nearbyPicturesText"
        android:text="@string/more" />

    <Button
        android:id="@+id/viewStreamsButtonVNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nearbyPicturesText"
        android:layout_alignRight="@+id/nearbyPicturesText"
        android:layout_below="@+id/nearbyPicturesText"
        android:layout_marginTop="19dp"
        android:text="@string/view_all_streams"
        android:textSize="15sp" />

</RelativeLayout>